Fix: Remise en place du dark mode + gestion auteur des pages

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -5,6 +5,7 @@
     border-radius: 10px;
     color: var(--color-light);
     font-size: .8rem;
+    font-weight: 400;
     padding: .5rem 1rem;
     border: 1px solid var(--color-contrast);
     min-height: 35px;
