--- a/components/Button/IconButton/IconButton.module.scss
+++ b/components/Button/IconButton/IconButton.module.scss
@@ -2,6 +2,7 @@
 
 .button {
   font-size: 1.5rem;
+  font-weight: 400;
   display: inline-block;
   margin-left: .5rem;
   color: var(--color-contrast);
