--- a/container/Builder/Navigation/Navigation.module.scss
+++ b/container/Builder/Navigation/Navigation.module.scss
@@ -61,6 +61,7 @@
     position: absolute;
     top: 15px;
     right: 15px;
+    color: var(--color-dark);
   }
 
   &.left {
